Added "Switching my blog to a static site generator" blog post

--- a/config.yaml
+++ b/config.yaml
@@ -12,6 +12,7 @@ taxonomies:
   category: categories
 
 enableRobotsTXT: true
+pygmentsUseClasses: true
 
 permalinks:
   articles: /:year/:month/:day/:slug/
