--- a/config.yaml
+++ b/config.yaml
@@ -1,9 +1,8 @@
 baseURL: https://palant.de/
 languageCode: en-us
 copyright: This work is licensed under a Creative Commons Attribution-ShareAlike 4.0 International License.
-title: "Wladimir Palant's notes"
+title: "Extensions, security, random bla bla"
 params:
-  subtitle: Musings about extensions, security and some more
   AuthorTwitter: "@WPalant"
 author:
   name: Wladimir Palant
