--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 baseURL: https://palant.de/
 languageCode: en-us
 copyright: This work is licensed under a Creative Commons Attribution-ShareAlike 4.0 International License.
-title: "Extensions, security, random bla bla"
+title: "Extensions, security, random blah blah"
 params:
   AuthorTwitter: "@WPalant"
 author:
