--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://palant.de/
+baseURL: https://palant.info/
 languageCode: en-us
 copyright: This work is licensed under a Creative Commons Attribution-ShareAlike 4.0 International License.
 title: "Extensions, security, random blah blah"
