Switched to a standard way to generate Table of Contents, now that it is usable

--- a/config.yaml
+++ b/config.yaml
@@ -52,3 +52,6 @@ markup:
       autoHeadingIDType: blackfriday
     renderer:
       unsafe: true
+  tableOfContents:
+    startLevel: 2
+    endLevel: 8
