Updated MemE theme to include the fix for https://github.com/reuixiy/hugo-theme-meme/issues/147

--- a/config.yaml
+++ b/config.yaml
@@ -27,6 +27,7 @@ params:
   displayPostsCount: true
   listWidth: 42
   displayListTitle: true
+  limitEntriesLimit: 5
   listDateFormat: "January 2"
   listDatePosition: "right"
   groupByMonth: false
