--- a/themes/meme/config-examples/en/config.toml
+++ b/themes/meme/config-examples/en/config.toml
@@ -428,10 +428,6 @@ uglyURLs = false
 
     displayListTitle = true
 
-    # Set to a non-negative number to limit the number of posts displayed per
-    # taxonomy term.
-    limitEntriesLimit = -1
-
     listDateFormat = "January 2"
     # ATTENTION: be sure to follow the
     #            specified format
@@ -466,6 +462,11 @@ uglyURLs = false
     # Display count of posts in each
     # taxonomy term?
     displayTaxonomyTermCount = true
+
+    # Set to a non-negative number to limit
+    # the number of posts displayed per
+    # taxonomy term.
+    limitEntriesLimit = -1
 
 
     ######################################
