Fixed icon path in manifest.json

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -3,7 +3,7 @@
   "short_name": "Almost Safe",
   "icons": [
       {
-          "src": "/android-chrome-512x512.png",
+          "src": "/icons/android-chrome-512x512.png",
           "sizes": "144x144",
           "type": "image/png"
       }
