Fixed website name in manifest.json

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Almost Safe",
-  "short_name": "Almost Safe",
+  "name": "Almost Secure",
+  "short_name": "Almost Secure",
   "icons": [
       {
           "src": "/icons/android-chrome-512x512.png",
