--- a/config.yaml
+++ b/config.yaml
@@ -87,7 +87,7 @@ params:
   fontFamilyTitle: "'Orkney', sans-serif"
   fontFamilyHeadings: "'Orkney', sans-serif"
   fontFamilyCode: "'SometypeMono', monospace"
-  fontFamilyBody: "'Philosopher', serif"
+  fontFamilyBody: "'Lato', sans-serif"
   fontSize: 20
   lineHeight: 1.618
 
