Switched from Sometype Mono to mononoki for the monospace font

--- a/config.yaml
+++ b/config.yaml
@@ -86,7 +86,7 @@ params:
   fontFamilySiteBrand: "'Orkney', sans-serif"
   fontFamilyTitle: "'Orkney', sans-serif"
   fontFamilyHeadings: "'Orkney', sans-serif"
-  fontFamilyCode: "'SometypeMono', monospace"
+  fontFamilyCode: "'mononoki', monospace"
   fontFamilyBody: "'Lato', sans-serif"
   fontSize: 20
   lineHeight: 1.618
