Updated MemE theme to current state (revision 1e1a462)

--- a/config.yaml
+++ b/config.yaml
@@ -46,6 +46,7 @@ params:
   openGraph: true
   twitterCards: true
   autoDetectImages: true
+  enableSRI: true
 
   duration: 0.5
   primaryColorLight: "220, 90%, 56%"
