Send Fediverse Observer requests in JSON format

--- a/config.yaml
+++ b/config.yaml
@@ -3,6 +3,7 @@ languageCode: en-us
 copyright: "This work is licensed under a Creative Commons Attribution-ShareAlike 4.0 International License"
 title: "Almost Secure"
 rssLimit: 10
+timeout: 60
 params:
   enableHeader: true
   displayHeaderInHome: true
