Updated MemE theme to revision 361e6b9

--- a/themes/meme/config-examples/en/config.toml
+++ b/themes/meme/config-examples/en/config.toml
@@ -18,7 +18,11 @@ newContentEditor = ""
 defaultContentLanguage = "en"
 defaultContentLanguageInSubdir = false
 
-# Pluralize titles in lists?
+# Title case style
+# https://gohugo.io/getting-started/configuration/#configure-title-case
+titleCaseStyle = "none"
+
+# Pluralize list titles
 pluralizeListTitles = false
 
 # The length of text in words to show in summary
@@ -94,21 +98,6 @@ uglyURLs = false
 # HTML minify
 [minify.tdewolff.html]
     keepWhitespace = false
-
-# Author’s information
-[author]
-    # Name
-    name = "reuixiy"
-    # Email
-    email = "reuixiy@gmail.com"
-    # Motto or introduction
-    motto = "Viva La Vida"
-    # Avatar
-    avatar = "/icons/apple-touch-icon.png"
-    # Personal website, default: baseURL
-    website = "https://io-oi.me/"
-    # Twitter
-    twitter = "reuixiy"
 
 # Related content
 [related]
@@ -737,6 +726,39 @@ uglyURLs = false
     gitalkEnableHotKey = true
     # Note: https://github.com/gitalk/gitalk
 
+    ## Giscus
+    enableGiscus = false
+    giscusRepo = "[ENTER repo/you/want HERE]"
+    giscusRepoId = "[ENTER REPO ID HERE]"
+    giscusCategory = "[ENTER CATEGORY NAME HERE]"
+    giscusCategoryId = "[ENTER CATEGORY ID HERE]"
+    giscusMapping = "pathname"
+    giscusStrict = false
+    giscusReactionsEnabled = true
+    giscusEmitMetaData = false
+    giscusInputPosition = "top"
+    giscusTheme = "light"
+    giscusThemeDark = "dark"
+    giscusLang = "en"
+    # Note: https://giscus.app
+
+    # Remark42
+    enableRemark42 = false
+    remark42Host = ""
+    remark42SiteId = "remark"
+    remark42Url = ""
+    remark42Components = ["embed"]
+    remark42MaxShownComments = 15
+    remark42MaxLastComments = 15
+    remark42Theme = "light"
+    remark42PageTitle = ""
+    remark42Locale = "en"
+    remark42ShowEmailSubscription = true
+    remark42ShowRssSubscription = true
+    remark42SimpleView = false
+    remark42NoFooter = false
+    # Note: https://remark42.com/docs/configuration/frontend/
+
 
     ######################################
     # Google Analytics
@@ -1204,7 +1226,7 @@ uglyURLs = false
 
     # Fetch fediverse instances list for
     # input suggestions
-    fetchFediverseInstances = true
+    fetchFediverseInstances = false
     # Note: Recommended when using mastodon
     #       or fediverse share items. This will
     #       cause a list of instances to be
@@ -1481,3 +1503,20 @@ uglyURLs = false
         valine = "/npm/valine@1.4.14/dist/Valine.min.js"
         busuanzi = "https://busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"
         utterances = "https://utteranc.es/client.js"
+
+
+    ######################################
+    # Author’s information
+    [params.author]
+        # Name
+        name = "reuixiy"
+        # Email
+        email = "reuixiy@gmail.com"
+        # Motto or introduction
+        motto = "Viva La Vida"
+        # Avatar
+        avatar = "/icons/apple-touch-icon.png"
+        # Personal website, default: baseURL
+        website = "https://io-oi.me/"
+        # Twitter
+        twitter = "reuixiy"
