--- a/themes/meme/config-examples/zh-tw/config.toml
+++ b/themes/meme/config-examples/zh-tw/config.toml
@@ -18,6 +18,10 @@ newContentEditor = ""
 defaultContentLanguage = "zh-tw"
 defaultContentLanguageInSubdir = false
 
+# 標題大小寫格式
+# https://gohugo.io/getting-started/configuration/#configure-title-case
+titleCaseStyle = "none"
+
 # 是否複數化列表頁面的標題
 pluralizeListTitles = false
 
@@ -92,21 +96,6 @@ uglyURLs = false
 # 壓縮 HTML
 [minify.tdewolff.html]
     keepWhitespace = false
-
-# 作者資訊
-[author]
-    # 名字
-    name = "reuixiy"
-    # 郵箱
-    email = "reuixiy@gmail.com"
-    # 座右銘或簡介
-    motto = "Viva La Vida"
-    # 頭像
-    avatar = "/icons/apple-touch-icon.png"
-    # 網站（預設值：baseURL）
-    website = "https://io-oi.me/"
-    # 推特
-    twitter = "reuixiy"
 
 # 相關文章
 [related]
@@ -683,6 +672,39 @@ uglyURLs = false
     gitalkEnableHotKey = true
     # 說明：https://github.com/gitalk/gitalk
 
+    ## Giscus
+    enableGiscus = false
+    giscusRepo = "[ENTER repo/you/want HERE]"
+    giscusRepoId = "[ENTER REPO ID HERE]"
+    giscusCategory = "[ENTER CATEGORY NAME HERE]"
+    giscusCategoryId = "[ENTER CATEGORY ID HERE]"
+    giscusMapping = "pathname"
+    giscusStrict = false
+    giscusReactionsEnabled = true
+    giscusEmitMetaData = false
+    giscusInputPosition = "top"
+    giscusTheme = "light"
+    giscusThemeDark = "dark"
+    giscusLang = "zh-TW"
+    # 說明：https://giscus.app/zh-TW
+
+    # Remark42
+    enableRemark42 = false
+    remark42Host = ""
+    remark42SiteId = "remark"
+    remark42Url = ""
+    remark42Components = ["embed"]
+    remark42MaxShownComments = 15
+    remark42MaxLastComments = 15
+    remark42Theme = "light"
+    remark42PageTitle = ""
+    remark42Locale = "zh-tw"
+    remark42ShowEmailSubscription = true
+    remark42ShowRssSubscription = true
+    remark42SimpleView = false
+    remark42NoFooter = false
+    # 說明：https://remark42.com/docs/configuration/frontend/
+
 
     ######################################
     # Google Analytics
@@ -1158,7 +1180,7 @@ uglyURLs = false
     postShareItems = ["facebook", "mastodon", "fediverse", "twitter", "linkedin", "telegram", "weibo", "douban", "qq", "qzone", "pocket", "hackernews", "qrcode", "email"]
 
     # 從網路取得 Fediverse 實例清單用於輸入建議
-    fetchFediverseInstances = true
+    fetchFediverseInstances = false
     # 說明：當開啟 mastodon 或 fediverse 分享項
     #      時建議開啟。開啟後建置時，資料需要從網
     #      路下載，會帶來額外的建置時間。
@@ -1446,3 +1468,20 @@ uglyURLs = false
         valine = "/npm/valine@1.4.14/dist/Valine.min.js"
         busuanzi = "https://busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"
         utterances = "https://utteranc.es/client.js"
+
+
+    ######################################
+    # 作者資訊
+    [params.author]
+        # 名字
+        name = "reuixiy"
+        # 郵箱
+        email = "reuixiy@gmail.com"
+        # 座右銘或簡介
+        motto = "Viva La Vida"
+        # 頭像
+        avatar = "/icons/apple-touch-icon.png"
+        # 網站（預設值：baseURL）
+        website = "https://io-oi.me/"
+        # 推特
+        twitter = "reuixiy"
