--- a/themes/meme/config-examples/en/config.toml
+++ b/themes/meme/config-examples/en/config.toml
@@ -1520,3 +1520,5 @@ uglyURLs = false
         website = "https://io-oi.me/"
         # Twitter
         twitter = "reuixiy"
+        # Fediverse
+        fediverse = "@reuixiy@bird.makeup"
