--- a/themes/meme/config-examples/zh-tw/config.toml
+++ b/themes/meme/config-examples/zh-tw/config.toml
@@ -1485,3 +1485,5 @@ uglyURLs = false
         website = "https://io-oi.me/"
         # 推特
         twitter = "reuixiy"
+        # Fediverse
+        fediverse = "@reuixiy@bird.makeup"
