Published "BIScience: Collecting browsing history under false pretenses" guest post

--- a/config.yaml
+++ b/config.yaml
@@ -64,6 +64,7 @@ params:
     - email
 
   fetchFediverseInstances: true
+  enablePostCopyright: true
 
   duration: 0.5
   primaryColorLight: "220, 90%, 56%"
@@ -200,6 +201,8 @@ markup:
       linkify: false
     parser:
       autoHeadingIDType: blackfriday
+      attribute:
+        block: true
     renderer:
       unsafe: true
   tableOfContents:
