--- a/config.yaml
+++ b/config.yaml
@@ -199,6 +199,15 @@ markup:
   goldmark:
     extensions:
       linkify: false
+      passthrough:
+        enable: true
+        delimiters:
+          block:
+          - - '\['
+            - '\]'
+          inline:
+          - - '\('
+            - '\)'
     parser:
       autoHeadingIDType: blackfriday
       attribute:
